@@ -1,0 +1,10 @@
+@echo off
+title cdt-S0ft - MANUAL BACKUP
+echo PLEASE CLOSE THE PAWNSHOP SYSTEM
+pause
+echo PLEASE WAIT WHILE SYSTEM IS BACKING UP
+rar a ..\BRANCHCODE.rar -agMMddyyyy W3W1LH4CKU.FDB
+cls 
+echo DONE!!! THANK YOU FOR WAITING
+pause
+exit
